[gd_scene load_steps=6 format=3 uid="uid://d1y0a6twnag5x"]

[ext_resource type="Script" uid="uid://saa68dyx8t41" path="res://Scenes/Ui/TowerDetailUi/tower_detail_ui.gd" id="1_40msb"]
[ext_resource type="Theme" uid="uid://duabvow4i86km" path="res://Resources/Themes/Base/base_theme.tres" id="1_qg5uv"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_qg5uv"]
size = Vector2(127, 127)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_2qb18"]
size = Vector2(64, 64)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_gf102"]
size = Vector2(32, 32)

[node name="TowerDetailUi" type="Panel"]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_qg5uv")
script = ExtResource("1_40msb")

[node name="Grid" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopRow" type="HBoxContainer" parent="Grid"]
layout_mode = 2

[node name="HideDetailsButton" type="Button" parent="Grid/TopRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 10
text = "X
"

[node name="ContentRows" type="VBoxContainer" parent="Grid"]
layout_mode = 2
size_flags_vertical = 3

[node name="TowerTexture" type="TextureRect" parent="Grid/ContentRows"]
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("PlaceholderTexture2D_qg5uv")

[node name="Spacer" type="Control" parent="Grid/ContentRows"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="TargetPriorityText" type="Label" parent="Grid/ContentRows"]
layout_mode = 2
size_flags_horizontal = 4
text = "Target Priority"

[node name="TogglePriorityButton" type="Button" parent="Grid/ContentRows"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_horizontal = 4
text = "FIRST"

[node name="Spacer2" type="Control" parent="Grid/ContentRows"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="UpgradeTexture1" type="TextureRect" parent="Grid/ContentRows"]
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("PlaceholderTexture2D_2qb18")

[node name="Spacer4" type="Control" parent="Grid/ContentRows"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="UpgradeTexture2" type="TextureRect" parent="Grid/ContentRows"]
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("PlaceholderTexture2D_2qb18")

[node name="Spacer5" type="Control" parent="Grid/ContentRows"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="UpgradeTexture3" type="TextureRect" parent="Grid/ContentRows"]
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("PlaceholderTexture2D_2qb18")

[node name="BottomContentRow" type="HBoxContainer" parent="Grid/ContentRows"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="DamageCountIcon" type="TextureRect" parent="Grid/ContentRows/BottomContentRow"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("PlaceholderTexture2D_gf102")

[node name="Spacer" type="Control" parent="Grid/ContentRows/BottomContentRow"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="DamageCountLabel" type="Label" parent="Grid/ContentRows/BottomContentRow"]
layout_mode = 2
size_flags_horizontal = 4
text = "0"

[node name="SellButton" type="Button" parent="Grid/ContentRows"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Sell"

[node name="Spacer3" type="Control" parent="Grid/ContentRows"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[connection signal="pressed" from="Grid/TopRow/HideDetailsButton" to="." method="_on_hide_details_button_pressed"]
[connection signal="pressed" from="Grid/ContentRows/TogglePriorityButton" to="." method="_on_toggle_priority_button_pressed"]
[connection signal="pressed" from="Grid/ContentRows/SellButton" to="." method="_on_sell_button_pressed"]
